--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,9 +1,5 @@
 <ul class="list-group">
-    <li class="list-group-item">1. category</li>
-    <li class="list-group-item">2. category</li>
-    <li class="list-group-item">3. category</li>
-    <li class="list-group-item">4. category</li>
-    <li class="list-group-item">5. category</li>
+    <li *ngFor="let category of categories" class="list-group-item">{{category.categoryName}}</li>
 
 
 </ul>
