--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,21 +1,33 @@
 <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
   <span class="visually-hidden">Loading...</span>
 </div>
+
+<div class="mb-3">
+  <label for="filterText" class="form-label">Ürün ara</label>
+  <input [(ngModel)]="filterText" type="text" class="form-control" id="filterText" placeholder="arama ifadesi giriniz...">
+</div>
+
+<div *ngIf="filterText.length>2" class="alert alert-success">
+  {{filterText}} aradınız.
+</div>
+
   <table *ngIf="dataLoaded==true" class="table">
     <thead>
       <tr>
         <th>Id</th>
-        <th>Name</th>
-        <th>category Id</th>
-        <th>Price</th>
-        <th>Stock</th>
+        <th>Ürün adı</th>
+        <th>Kategori</th>
+        <th>Fiyat</th>
+        <th>kdv'li fiyat</th>
+        <th>Stok Adedi</th>
       </tr>
     </thead>
     <tr *ngFor="let product of products">
       <td>{{ product.productId }}</td>
-      <td>{{ product.productName }}</td>
+      <td>{{ product.productName |uppercase}}</td>
       <td>{{ product.categoryId }}</td>
       <td>{{ product.unitPrice }}</td>
+      <td>{{ product.unitPrice |vatAdded:18 |currency}}</td>
       <td>{{ product.unitsInStock }}</td>
     </tr>
   </table>
