--- a/src/app/components/product-add/product-add.component.html
+++ b/src/app/components/product-add/product-add.component.html
@@ -5,10 +5,59 @@
       <div class="card-body">
         <!-- ts de oluşturduğumuz productAddForm buraya ait diye [formGroup]="productAddForm" -->
         <form [formGroup]="productAddForm">
-            <div class="form-group">
-                <input type="text" id="prodcutName" formControlName="productName" class="form-control" placeholder="ürün adı"/>
+          <div class="form-group">
+            <div class="mb-3">
+              <label for="productName">ürün adı</label>
+              <input
+                type="text"
+                id="productName"
+                formControlName="productName"
+                class="form-control"
+                placeholder="ürün adı"
+              />
             </div>
+          </div>
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="categoryId">kategori</label>
+              <input
+                type="number"
+                id="categoryId"
+                formControlName="categoryId"
+                class="form-control"
+                placeholder="kategori"
+              />
+            </div>
+          </div>
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="unitsInStock">stok adedi</label>
+              <input
+                type="number"
+                id="unitsInStock"
+                formControlName="unitsInStock"
+                class="form-control"
+                placeholder="stok adedi"
+              />
+            </div>
+          </div>
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="unitPrice">fiyat</label>
+              <input
+                type="number"
+                id="unitPrice"
+                formControlName="unitPrice"
+                class="form-control"
+                placeholder="fiyat"
+              />
+            </div>
+          </div>
         </form>
+      </div>
+
+      <div class="card-footer">
+        <button class="btn btn-fill btn-primary" (click)="add()">Ekle</button>
       </div>
     </div>
   </div>
